...

            <EditText
                android:id="@+id/addPlantProfileName"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/addPlantProfileDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/addPlantProfileTemp"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
...

                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toTopOf="@+id/addPlantProfileCO2"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/addPlantProfileHumidity"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
...

                    android:inputType="numberDecimal"
                    app:layout_constraintBottom_toTopOf="@+id/addPlantProfileLight"
                    app:layout_constraintEnd_toEndOf="@+id/addPlantProfileCO2"
                    app:layout_constraintHorizontal_bias="0.0"
...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@id/textView7">
...

                    <EditText
                        android:id="@+id/addPlantProfileTempMin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/addPlantProfileTempMax"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/addPlantProfileCO2Min"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/addPlantProfileCO2Max"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/addPlantProfileHumidityMin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/addPlantProfileHumidityMax"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/addPlantProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
