...
    <string name="add_plant_profile">Add Plant Profile</string>
    <string name="optimal_environment">Optimal environment</string>
    <string name="carbon_dioxide">Carbon dioxide</string>
    <string name="threshold_values">Threshold values</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="add">Add</string>
    <string name="temperature_no_c">Temperature</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout"> Log out</string>

    <string name="plant_profile">Plant Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="description">Description</string>
    <string name="what_is_so_cool_about_this_plant">What is so cool about this plant...</string>
    <string name="edit_plant_profile">Edit Plant Profile</string>
    <string name="edit">edit</string>
    <string name="greenhouses">Greenhouses</string>
    <string name="plan_profiles">Plant Profiles</string>

    <string name="update">Update</string>
    <string name="update_profile_information">Update Profile Information</string>
    <string name="no_data">No data</string>
    <string name="update_profile">Update Profile</string>
    <string name="save_changes">Save Changes</string>
...
